feat: 헤더, 참여기업, 직군/직무 기본 UI

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,9 @@
       "@pages/*": [
         "./pages/*"
       ],
+      "@styles/*": [
+        "./styles/*"
+      ],
       "@stores/*": [
         "./stores/*"
       ],
@@ -27,8 +30,8 @@
       "@icons/*": [
         "./icons/*"
       ],
-      "@utils/*": [
-        "./utils/*"
+      "@hooks/*": [
+        "./hooks/*"
       ],
       "@requests/*": [
         "./requests/*"
