--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "request": "^2.88.2",
-    "uuid": "^8.3.2"
+    "request": "^2.88.2"
   }
 }
