feat: 페이지 진입 시 데이터 불러오기

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -39,9 +39,9 @@
       "@models/*": [
         "./models/*"
       ],
-      "@collections/*": [
-        "./collections/*"
-      ]
+      "@contexts/*": [
+        "./contexts/*"
+      ],
     }
   },
   "include": [
