--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "tsconfig-paths-webpack-plugin": "^3.5.2"
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "react-custom-scrollbars": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
