build: 서버 빌드 경로 수정

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index",
-    "build": "pkg . --output ../out/jmf-server.exe"
+    "build": "pkg . --output ../jmf-admin/jmf-server.exe"
   },
   "pkg": {
     "scripts": "*.js",
